--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Scooping the pizzas , pizza peel technique #pizzalover #pizza #streetfood #food</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 29.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Every Day Gets Lighter When You Let Go of Yourself</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 28.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1432,7 +1432,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 15.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2349,7 +2349,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 10</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 30, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 29.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 28.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5578,7 +5578,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 15.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -6110,7 +6110,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 10</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 30, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Every Day Gets Lighter When You Let Go of Yourself</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Scooping the pizzas , pizza peel technique #pizzalover #pizza #streetfood #food</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
