--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Choosing a Life of Openness</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Awesome Mini Nasdaq Trading Algo - FULLY Disclosed!</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Scooping the pizzas , pizza peel technique #pizzalover #pizza #streetfood #food</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -240,9 +240,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=JQ_Yvg-3OhE" target="_blank">
-                    <img src="https://i.ytimg.com/vi/JQ_Yvg-3OhE/mqdefault.jpg" alt="Ramayana Lives On | Namit Malhotra with Sadhguru on Faith, Culture & Creation">
+                    <img src="https://i.ytimg.com/vi/JQ_Yvg-3OhE/mqdefault.jpg" alt="Ramayana Lives On | Producer Namit Malhotra with Sadhguru on Faith, Culture & Creation">
                     <div class="video-info">
-                        <h3>Ramayana Lives On | Namit Malhotra with Sadhguru on Faith, Culture & Creation</h3>
+                        <h3>Ramayana Lives On | Producer Namit Malhotra with Sadhguru on Faith, Culture & Creation</h3>
                         <div class="channel">Sadhguru</div>
                         <div class="date">22 hours ago</div>
                     </div>
@@ -1443,7 +1443,7 @@
                     <div class="video-info">
                         <h3>Top Five Most Effective Oscillators</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Awesome Mini Nasdaq Trading Algo - FULLY Disclosed!</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5589,7 +5589,7 @@
                         <div class="video-info">
                             <h3>Top Five Most Effective Oscillators</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Choosing a Life of Openness</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7289,9 +7289,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=JQ_Yvg-3OhE" target="_blank">
-                        <img src="https://i.ytimg.com/vi/JQ_Yvg-3OhE/mqdefault.jpg" alt="Ramayana Lives On | Namit Malhotra with Sadhguru on Faith, Culture & Creation">
+                        <img src="https://i.ytimg.com/vi/JQ_Yvg-3OhE/mqdefault.jpg" alt="Ramayana Lives On | Producer Namit Malhotra with Sadhguru on Faith, Culture & Creation">
                         <div class="video-info">
-                            <h3>Ramayana Lives On | Namit Malhotra with Sadhguru on Faith, Culture & Creation</h3>
+                            <h3>Ramayana Lives On | Producer Namit Malhotra with Sadhguru on Faith, Culture & Creation</h3>
                             <div class="channel">Sadhguru</div>
                             <div class="date">22 hours ago</div>
                         </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Scooping the pizzas , pizza peel technique #pizzalover #pizza #streetfood #food</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
