--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Choosing a Life of Openness</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Awesome Mini Nasdaq Trading Algo - FULLY Disclosed!</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Scooping the pizzas , pizza peel technique #pizzalover #pizza #streetfood #food</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -860,7 +860,7 @@
                     <div class="video-info">
                         <h3>A Simple Momentum Trading Strategy (Backed By Data)</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1883,7 +1883,7 @@
                     <div class="video-info">
                         <h3>Slippage & Commission: Trading Costs Explained! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Awesome Mini Nasdaq Trading Algo - FULLY Disclosed!</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5314,7 +5314,7 @@
                         <div class="video-info">
                             <h3>A Simple Momentum Trading Strategy (Backed By Data)</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -5864,7 +5864,7 @@
                         <div class="video-info">
                             <h3>Slippage & Commission: Trading Costs Explained! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Choosing a Life of Openness</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Scooping the pizzas , pizza peel technique #pizzalover #pizza #streetfood #food</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
